# pageindex-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
pageindex_rag/: __init__.py  config.py  llm.py
pageindex_rag/api/: app.py
pageindex_rag/api/routes/: documents.py  qa.py  search.py
pageindex_rag/benchmark/: evaluator.py  financebench.py
pageindex_rag/ingestion/: ingest.py
pageindex_rag/pipeline/: answer_generator.py  rag_pipeline.py
pageindex_rag/retrieval/: node_extractor.py  tree_search.py
pageindex_rag/search/: description_search.py  embeddings.py  metadata_search.py  router.py  semantic_search.py
pageindex_rag/storage/: document_store.py  models.py
scripts/: compare_optimization.py  deploy.sh  ingest_financebench.py  marker_json_to_tree.py  marker_modal_deployment.py  run_benchmark.py  test_marker_modal.py  validate_marker_pipeline.py
tests/: conftest.py  test_api_documents.py  test_api_search.py  test_benchmark.py  test_deployment.py  test_description_search.py  test_e2e.py  test_full_benchmark.py  test_ingestion.py  test_init.py  test_metadata.py  test_metadata_search.py  test_node_extractor.py  test_rag_pipeline.py  test_search_router.py  test_semantic_search.py  test_storage.py  test_tree_search.py
tests/fixtures/: 3M_2018_10K_tree.json
